--- a/radiance/src/resources/css/style.less
+++ b/radiance/src/resources/css/style.less
@@ -1,10 +1,12 @@
 
-/** module */
-
 @import "./common.less";
+
+/** module */
 
 @import "./navbar.less";
 @import "./footer.less";
 @import "./slider.less";
+
+/** page */
 
 @import "./index.less";
