--- a/radiance/src/resources/css/page/index.less
+++ b/radiance/src/resources/css/page/index.less
@@ -1,5 +1,9 @@
 @import "./base.less";
 
+.intro {
+    margin-top: @navbar-height;
+}
+
 .travel-container .container-fluid {
     width: @page-width;
     min-width: @page-width;
@@ -74,7 +78,7 @@
             content: "";
             display: block;
             border-top: 14px solid transparent;
-            border-left: 15px solid transparent;
+            border-left: 16px solid transparent;
             border-top-color: #0163ae;
         }
     }
